cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_436.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/t1_lib.c:1409: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/t1_lib.c:1409:5: Write of unused value
1407.       const unsigned char *p;
1408.       int slen, renew_ticket = 0, declen;
1409.       SSL_TICKET_STATUS ret = SSL_TICKET_FATAL_ERR_OTHER;
            ^
1410.       size_t mlen;
1411.       unsigned char tick_hmac[EVP_MAX_MD_SIZE];
